:milky_way:Updated application id

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
   "applications": {
       "gecko": {
-        "id": "gmlsnip@zackbanack",
+        "id": "gmlsnip@iiviigames",
         "strict_min_version": "53.0"
       }
     },
